crates/ods-web/tests/snapshots/catalog__catalog_recorded.snap
---
source: crates/ods-web/tests/catalog.rs
expression: pretty(view)
---
{
  "decisions": {
    "based_on": 2,
    "caveats": [
      "Reuse is decided offline: a reused node's relation isn't checked by this plan (it is when a run starts)."
    ],
    "error": null,
    "relations_checked": false,
    "state": "recorded",
    "warnings": []
  },
  "facets": [
    {
      "key": "type",
      "label": "Resource type",
      "note": null,
      "values": [
        {
          "count": 2,
          "label": "model",
          "selected": false,
          "value": "model"
        },
        {
          "count": 1,
          "label": "seed",
          "selected": false,
          "value": "seed"
        }
      ]
    },
    {
      "key": "layer",
      "label": "Layer",
      "note": "the folder under the model paths",
      "values": [
        {
          "count": 1,
          "label": "staging",
          "selected": false,
          "value": "staging"
        },
        {
          "count": 1,
          "label": "marts",
          "selected": false,
          "value": "marts"
        }
      ]
    },
    {
      "key": "materialized",
      "label": "Materialization",
      "note": null,
      "values": [
        {
          "count": 1,
          "label": "table",
          "selected": false,
          "value": "table"
        },
        {
          "count": 1,
          "label": "view",
          "selected": false,
          "value": "view"
        },
        {
          "count": 1,
          "label": "seed",
          "selected": false,
          "value": "seed"
        }
      ]
    },
    {
      "key": "tag",
      "label": "Tags",
      "note": null,
      "values": [
        {
          "count": 1,
          "label": "core",
          "selected": false,
          "value": "core"
        }
      ]
    },
    {
      "key": "decision",
      "label": "Next-run decision",
      "note": "From the plan against the latest snapshot, made offline. Reuse is decided offline: a reused node's relation isn't checked by this plan (it is when a run starts).",
      "values": [
        {
          "count": 1,
          "label": "Build",
          "selected": false,
          "value": "build"
        },
        {
          "count": 1,
          "label": "Reuse",
          "selected": false,
          "value": "reuse"
        },
        {
          "count": 1,
          "label": "Never built",
          "selected": false,
          "value": "never_built"
        },
        {
          "count": 0,
          "label": "Unknown",
          "selected": false,
          "value": "unknown"
        }
      ]
    },
    {
      "key": "health",
      "label": "Health",
      "note": "Failing: failed in the last run and not built since. Warning: built, but without tests (models and snapshots), with tests not recorded passing on this build or changed since, or skipped in the last run. Healthy: built, and its tests passed on this build as they are now. Unknown: never built by ODS. The last run's record doesn't say what failed, so failures aren't measured.",
      "values": [
        {
          "count": 2,
          "label": "Healthy",
          "selected": false,
          "value": "healthy"
        },
        {
          "count": 0,
          "label": "Warning",
          "selected": false,
          "value": "warning"
        },
        {
          "count": 0,
          "label": "Failing",
          "selected": false,
          "value": "failing"
        },
        {
          "count": 1,
          "label": "Unknown",
          "selected": false,
          "value": "unknown"
        }
      ]
    },
    {
      "key": "lineage",
      "label": "Lineage confidence",
      "note": "Column lineage from the SQL; seeds have none (n/a).",
      "values": [
        {
          "count": 1,
          "label": "parsed",
          "selected": false,
          "value": "parsed"
        },
        {
          "count": 1,
          "label": "inferred",
          "selected": false,
          "value": "inferred"
        },
        {
          "count": 0,
          "label": "observed",
          "selected": false,
          "value": "observed"
        },
        {
          "count": 0,
          "label": "unknown",
          "selected": false,
          "value": "unknown"
        },
        {
          "count": 0,
          "label": "opaque",
          "selected": false,
          "value": "opaque"
        },
        {
          "count": 1,
          "label": "n/a",
          "selected": false,
          "value": "n/a"
        }
      ]
    }
  ],
  "health_how": "Failing: failed in the last run and not built since. Warning: built, but without tests (models and snapshots), with tests not recorded passing on this build or changed since, or skipped in the last run. Healthy: built, and its tests passed on this build as they are now. Unknown: never built by ODS. The last run's record doesn't say what failed, so failures aren't measured.",
  "layer_source": "the folder under the model paths",
  "query": {
    "descending": false,
    "filters": {},
    "search": null,
    "sort": "name"
  },
  "rows": [
    {
      "decision": {
        "decision": "never_built",
        "reasons": [
          {
            "code": "never_built",
            "label": "never built",
            "message": "no successful build recorded"
          }
        ],
        "summary": "no successful build recorded"
      },
      "health": {
        "health": "unknown",
        "reasons": [
          "never built by ODS: nothing to judge it on"
        ]
      },
      "href": "catalog/model.shop.customers",
      "id": "model.shop.customers",
      "last_build": null,
      "layer": "marts",
      "lineage": "inferred",
      "materialization": "table",
      "name": "</script><img src=x onerror=alert(1)>",
      "resource_type": "model",
      "tags": [],
      "type_label": "python model"
    },
    {
      "decision": {
        "decision": "build",
        "reasons": [
          {
            "code": "code_changed",
            "label": "code changed",
            "message": "code changed since run 9ea38bd5: sql"
          }
        ],
        "summary": "sql changed since run 9ea38bd5"
      },
      "health": {
        "health": "healthy",
        "reasons": [
          "built in run 9ea38bd5 at 2026-09-28T09:00:00Z",
          "its tests passed in run 9ea38bd5 at 2026-09-28T09:05:00Z"
        ]
      },
      "href": "catalog/model.shop.orders",
      "id": "model.shop.orders",
      "last_build": {
        "built_at": "2026-09-28T09:00:00Z",
        "run_id": "9ea38bd5-0000-4000-8000-000000000002",
        "short_run_id": "9ea38bd5",
        "snapshot": 2
      },
      "layer": "staging",
      "lineage": "parsed",
      "materialization": "view",
      "name": "orders",
      "resource_type": "model",
      "tags": [
        "core"
      ],
      "type_label": "model"
    },
    {
      "decision": {
        "decision": "reuse",
        "reasons": [
          {
            "code": "unchanged",
            "label": "unchanged",
            "message": "code and inputs unchanged since run e6f54fe3"
          }
        ],
        "summary": "code and inputs unchanged since run e6f54fe3"
      },
      "health": {
        "health": "healthy",
        "reasons": [
          "built in run e6f54fe3 at 2026-09-27T09:00:00Z",
          "a seed has no tests to run"
        ]
      },
      "href": "catalog/seed.shop.raw_orders",
      "id": "seed.shop.raw_orders",
      "last_build": {
        "built_at": "2026-09-27T09:00:00Z",
        "run_id": "e6f54fe3-0000-4000-8000-000000000001",
        "short_run_id": "e6f54fe3",
        "snapshot": 1
      },
      "layer": null,
      "lineage": "not_applicable",
      "materialization": "seed",
      "name": "raw_orders",
      "resource_type": "seed",
      "tags": [],
      "type_label": "seed"
    }
  ],
  "schema_version": 3,
  "total": 3
}
